--- a/car_info.html
+++ b/car_info.html
@@ -2,8 +2,8 @@
     <title>
         car info
     </title>
-    <!-- vedant behare -->
-     <h1>utkarsh burande CS24055</h1>
+    <!--vinit gharad-->
+     <h1>vinit gharad CS24062</h1>
     <h1>Range rover:</h1><p>The Range Rover is a 4x4 luxury SUV produced by Land Rover. It was launched in 1970 by British Leyland and is now in its fifth generation. The Range Rover is Land Rover’s flagship model and is known to be one of the most refined, accomplished and luxurious SUVs. It has the refinement, practicality, comfort and ride quality to take on some luxury sedans while also offering</p>
     <h1>Rolls-royce fantem:</h1><p>Rolls-Royce is a British company that designs, manufactures, and distributes power systems for aviation and other industries. It is the world's second-largest maker of aircraft engines and has major businesses in marine propulsion and energy sectors. In the 20th century, Rolls-Royce was also known for making luxury automobiles. </p>
     <h2>lamborghini aventador:</h2><p>The Lamborghini Aventador is a supercar that was first produced in 2012. It has a base price of $417,826. The car is powered by a 6.5-liter V-12 engine that produces 780 CV (574 kW) at 8,500 rpm. The car has a top speed of 355 km/h and can accelerate from 0-100 km/h in 2.8 seconds. The car has an electronically controlled all-wheel drive system (Haldex gen. IV) with rear mechanical self-locking differential. </p>
